[ci skip] fix collecting prediction 9cb247f8bfbe811cec246c195d0256b6c5a711bd

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eef9dc2a",
+   "id": "7690f397",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90dcad5",
+   "id": "30963345",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c982a84",
+   "id": "e733dd87",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb45e22",
+   "id": "9c38dddf",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ea6247",
+   "id": "52b1c7f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02881be6",
+   "id": "6412711d",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71300fd3",
+   "id": "868478fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ec300f2",
+   "id": "d3d53125",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a055c2",
+   "id": "af48b2d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3242bd51",
+   "id": "7269efb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84a0d66b",
+   "id": "28649c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb3662d9",
+   "id": "75fc0310",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bec00d56",
+   "id": "c338cbf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1846662",
+   "id": "cb466217",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d8579f6",
+   "id": "a51d70da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d6e561",
+   "id": "c17f8c0a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "957fd7fb",
+   "id": "110df0f7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246be299",
+   "id": "e762c00b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470d6861",
+   "id": "b0dfb9af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2123c8f",
+   "id": "340efc83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e86992",
+   "id": "e2ee3c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6ea869",
+   "id": "15195da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2225ed94",
+   "id": "2c26ad4a",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e27a28e",
+   "id": "7126092b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff775fab",
+   "id": "1668c1ae",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3653097a",
+   "id": "3c6fd2e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1fc0770",
+   "id": "b0a1f0cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed0679d",
+   "id": "b0337400",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776b90b4",
+   "id": "cebf7c10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a3888e",
+   "id": "1e9296c6",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272e48c0",
+   "id": "c8e61e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595e1e51",
+   "id": "e6fc0ceb",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71a86762",
+   "id": "503199aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de0c37a6",
+   "id": "35e67a00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7917fb03",
+   "id": "a1aae406",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d09335b",
+   "id": "41be2832",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af9444da",
+   "id": "f3bf48c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a30cb7fa",
+   "id": "3795bdef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce1f7e92",
+   "id": "5ec4354e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103ac97d",
+   "id": "c487557d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17891019",
+   "id": "2b121855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0d1222c",
+   "id": "a0c5ac63",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9070949e",
+   "id": "0dbd1a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0faf84",
+   "id": "35776041",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b245574",
+   "id": "d18dbc6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,27 +900,29 @@
     "\n",
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
-    "    # We need to create a generator outside of the function such that we don't recreate\n",
-    "    # one inside the `splitter` function and always get the first split.\n",
-    "    split_generator = cv_splitter.split(prediction_time.skb.eval())\n",
-    "    def splitter(X, y):\n",
+    "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
+    "\n",
+    "    def splitter(X, y, index_generator):\n",
     "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
     "        by `skrub.train_test_split`.\"\"\"\n",
-    "        train_idx, test_idx = next(split_generator)\n",
+    "        train_idx, test_idx = next(index_generator)\n",
     "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
     "\n",
     "    results = []\n",
+    "\n",
     "    for (_, test_idx), pipeline in zip(\n",
     "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
     "    ):\n",
     "        split = predictions.skb.train_test_split(\n",
-    "            predictions.skb.get_data(), splitter=splitter\n",
+    "            predictions.skb.get_data(),\n",
+    "            splitter=splitter,\n",
+    "            index_generator=index_generator,\n",
     "        )\n",
     "        results.append(\n",
     "            pl.DataFrame(\n",
     "                {\n",
     "                    \"prediction_time\": prediction_time.skb.eval()[test_idx],\n",
-    "                    \"load_mw\": split[\"test\"][\"_skrub_y\"],\n",
+    "                    \"load_mw\": split[\"y_test\"],\n",
     "                    \"predicted_load_mw\": pipeline.predict(split[\"test\"]),\n",
     "                }\n",
     "            )\n",
@@ -931,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e75058",
+   "id": "33659309",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -939,13 +941,14 @@
    "source": [
     "cv_predictions = collect_cv_predictions(\n",
     "    cv_results[\"pipeline\"], ts_cv_5, predictions, prediction_time\n",
-    ")"
+    ")\n",
+    "cv_predictions[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0168bec4",
+   "id": "0b9f01f1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -967,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc06794b",
+   "id": "5c4a748b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d18bf1d",
+   "id": "75ffe399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f316fae3",
+   "id": "031f725f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62ca699b",
+   "id": "fae5a7b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e85370a",
+   "id": "53d19609",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1040,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22dfbae4",
+   "id": "30390790",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0876780",
+   "id": "37472c4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18efeb4",
+   "id": "1fe060cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2425e0dd",
+   "id": "32b5a575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43c63785",
+   "id": "006b471f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1684e680",
+   "id": "8a89fb9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16cb677",
+   "id": "57e7fa78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,10 +1212,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a16eb6cc",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "c4fcbd8f",
+   "metadata": {},
    "outputs": [],
    "source": [
     "multioutput_cv_results"
@@ -1221,7 +1222,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41833c5",
+   "id": "fee8d15a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from IPython.display import display\n",
+    "\n",
+    "for metric_name, dataset_type in itertools.product([\"mape\", \"r2\"], [\"train\", \"test\"]):\n",
+    "    columns = multioutput_cv_results.columns[\n",
+    "        multioutput_cv_results.columns.str.startswith(f\"{dataset_type}_{metric_name}\")\n",
+    "    ]\n",
+    "    data_to_plot = multioutput_cv_results[columns]\n",
+    "    data_to_plot.columns = [\n",
+    "        col.replace(f\"{dataset_type}_\", \"\")\n",
+    "        .replace(f\"{metric_name}_\", \"\")\n",
+    "        .replace(\"_\", \" \")\n",
+    "        for col in columns\n",
+    "    ]\n",
+    "\n",
+    "    data_long = data_to_plot.melt(var_name=\"horizon\", value_name=\"score\")\n",
+    "    chart = (\n",
+    "        altair.Chart(\n",
+    "            data_long,\n",
+    "            title=f\"{dataset_type.title()} {metric_name.upper()} Scores by Horizon\",\n",
+    "        )\n",
+    "        .mark_boxplot(extent=\"min-max\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"horizon:N\",\n",
+    "                title=\"Horizon\",\n",
+    "                sort=altair.Sort(\n",
+    "                    [f\"horizon {h}h\" for h in range(1, data_to_plot.shape[1])]\n",
+    "                ),\n",
+    "            ),\n",
+    "            y=altair.Y(\"score:Q\", title=f\"{metric_name.upper()} Score\"),\n",
+    "            color=altair.Color(\"horizon:N\", legend=None),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    display(chart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe88c47d",
    "metadata": {},
    "outputs": [],
    "source": []
