--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7208e342",
+   "id": "60c2b1bd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf91ec3",
+   "id": "80423734",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c30ca4",
+   "id": "35d60fbb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9aea5e",
+   "id": "fd78d8d5",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a37e7726",
+   "id": "1a4d7749",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abb10124",
+   "id": "4ec4fd0d",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b912c25",
+   "id": "78bff603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4758fc38",
+   "id": "5718674f",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73300c4c",
+   "id": "194628fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f073643",
+   "id": "590cfd2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1547c1b4",
+   "id": "8b0a6d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0f22cb8",
+   "id": "28b67dc0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1392fe93",
+   "id": "099bbba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01254344",
+   "id": "0f106570",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "082e8571",
+   "id": "e6c68c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa333cec",
+   "id": "73626a5a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01aeb38f",
+   "id": "4b4f043b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94537d6d",
+   "id": "4abea5ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfdba699",
+   "id": "c56fccec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d6723e5",
+   "id": "6be38159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1713920",
+   "id": "bf19ec4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bdf6d25",
+   "id": "0a92701c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30df1083",
+   "id": "4b292976",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a2bfd13",
+   "id": "7143e52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd959cb7",
+   "id": "ebfc56b2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2b821e",
+   "id": "f1d50e14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68c18127",
+   "id": "97214057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c14af9",
+   "id": "88001c8f",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc54ce48",
+   "id": "26da475a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699f13d2",
+   "id": "1f40a7e0",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0031ff7c",
+   "id": "65ebd2c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0591adb",
+   "id": "619fcc2e",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "710085e1",
+   "id": "47229833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c34a3748",
+   "id": "e1c7072d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab6b96a",
+   "id": "28e3954d",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a49b6f",
+   "id": "8181030e",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4793499e",
+   "id": "404a4cb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c889fd",
+   "id": "bdd97cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a68847",
+   "id": "f22c6ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c7ea92a",
+   "id": "c8115239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776ad296",
+   "id": "9ad6bd1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23364826",
+   "id": "31c89b2e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "555e7ef1",
+   "id": "f9ea89f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194896fc",
+   "id": "f05333bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bc9cc37",
+   "id": "5cd5c672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,27 +900,29 @@
     "\n",
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
-    "    # We need to create a generator outside of the function such that we don't recreate\n",
-    "    # one inside the `splitter` function and always get the first split.\n",
-    "    split_generator = cv_splitter.split(prediction_time.skb.eval())\n",
-    "    def splitter(X, y):\n",
+    "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
+    "\n",
+    "    def splitter(X, y, index_generator):\n",
     "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
     "        by `skrub.train_test_split`.\"\"\"\n",
-    "        train_idx, test_idx = next(split_generator)\n",
+    "        train_idx, test_idx = next(index_generator)\n",
     "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
     "\n",
     "    results = []\n",
+    "\n",
     "    for (_, test_idx), pipeline in zip(\n",
     "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
     "    ):\n",
     "        split = predictions.skb.train_test_split(\n",
-    "            predictions.skb.get_data(), splitter=splitter\n",
+    "            predictions.skb.get_data(),\n",
+    "            splitter=splitter,\n",
+    "            index_generator=index_generator,\n",
     "        )\n",
     "        results.append(\n",
     "            pl.DataFrame(\n",
     "                {\n",
     "                    \"prediction_time\": prediction_time.skb.eval()[test_idx],\n",
-    "                    \"load_mw\": split[\"test\"][\"_skrub_y\"],\n",
+    "                    \"load_mw\": split[\"y_test\"],\n",
     "                    \"predicted_load_mw\": pipeline.predict(split[\"test\"]),\n",
     "                }\n",
     "            )\n",
@@ -931,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38587eff",
+   "id": "80c1f8f0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -939,13 +941,14 @@
    "source": [
     "cv_predictions = collect_cv_predictions(\n",
     "    cv_results[\"pipeline\"], ts_cv_5, predictions, prediction_time\n",
-    ")"
+    ")\n",
+    "cv_predictions[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4eaa06f",
+   "id": "04ada6d4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -967,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d684cfc1",
+   "id": "3dcc780a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a5c3409",
+   "id": "e04281f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b2c299f",
+   "id": "955700cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e0e8baf",
+   "id": "41cc4b0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e951bf1",
+   "id": "b82d7ade",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1040,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71ef200b",
+   "id": "174c73e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fa0925",
+   "id": "2f139694",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b0bf81",
+   "id": "b190118a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f906e19",
+   "id": "f9dd113b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154c8191",
+   "id": "da32e892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3076e79",
+   "id": "a9a0f63d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc6389f",
+   "id": "2859ce62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,10 +1212,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc74b52b",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "c7ac4b0e",
+   "metadata": {},
    "outputs": [],
    "source": [
     "multioutput_cv_results"
@@ -1221,7 +1222,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae81fdba",
+   "id": "50674a52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from IPython.display import display\n",
+    "\n",
+    "for metric_name, dataset_type in itertools.product([\"mape\", \"r2\"], [\"train\", \"test\"]):\n",
+    "    columns = multioutput_cv_results.columns[\n",
+    "        multioutput_cv_results.columns.str.startswith(f\"{dataset_type}_{metric_name}\")\n",
+    "    ]\n",
+    "    data_to_plot = multioutput_cv_results[columns]\n",
+    "    data_to_plot.columns = [\n",
+    "        col.replace(f\"{dataset_type}_\", \"\")\n",
+    "        .replace(f\"{metric_name}_\", \"\")\n",
+    "        .replace(\"_\", \" \")\n",
+    "        for col in columns\n",
+    "    ]\n",
+    "\n",
+    "    data_long = data_to_plot.melt(var_name=\"horizon\", value_name=\"score\")\n",
+    "    chart = (\n",
+    "        altair.Chart(\n",
+    "            data_long,\n",
+    "            title=f\"{dataset_type.title()} {metric_name.upper()} Scores by Horizon\",\n",
+    "        )\n",
+    "        .mark_boxplot(extent=\"min-max\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\n",
+    "                \"horizon:N\",\n",
+    "                title=\"Horizon\",\n",
+    "                sort=altair.Sort(\n",
+    "                    [f\"horizon {h}h\" for h in range(1, data_to_plot.shape[1])]\n",
+    "                ),\n",
+    "            ),\n",
+    "            y=altair.Y(\"score:Q\", title=f\"{metric_name.upper()} Score\"),\n",
+    "            color=altair.Color(\"horizon:N\", legend=None),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    display(chart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a6d3172",
    "metadata": {},
    "outputs": [],
    "source": []
